--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -3,7 +3,7 @@
 @import 'sass/pokemon';
 
 body {
-  background-color: $color;
+  background-color: $color-body;
   div {
     button {
       background-color: $color-button;
