--- a/pokedex/src/sass/_variables.scss
+++ b/pokedex/src/sass/_variables.scss
@@ -8,7 +8,7 @@ $color-button: rgb(204, 159, 189);
 // Body
 // ===========================================================================================
 
-$color: rgb(248, 248, 248);
+$color-body: rgb(248, 248, 248);
 
 // ===========================================================================================
 // Paragraph
