feat: includes css on pokemon card

--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -1,6 +1,9 @@
 @import 'sass/variables';
-@import 'sass/paragraph';
 @import 'sass/pokemon';
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   background-color: $color-body;
