--- a/pokedex/src/sass/_pokemon.scss
+++ b/pokedex/src/sass/_pokemon.scss
@@ -36,11 +36,10 @@
       top: 11px;
       bottom: 142.65px;
     }
-
   }
 
   .pokemon-name {
-    font-family: Nunito;
+    font-family: 'Nunito';
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -57,7 +56,7 @@
   }
 
   .pokemon-id {
-    font-family: Nunito;
+    font-family: 'Nunito';
     font-style: normal;
     font-weight: bold;
     font-size: 10px;
@@ -88,12 +87,11 @@
 }
 
 .pokemon-type {
+  padding-left: 8px;
 
   .pokemon-type-paragraph {
     display: inline-block;
-    margin-right: 2px;
-    margin-left: 2px;
-    font-family: Nunito;
+    font-family: 'Nunito';
     font-style: normal;
     font-weight: bold;
     font-size: 10px;
@@ -102,6 +100,8 @@
     border-radius: 4px;
     padding: 0 2px;
     text-transform: capitalize;
+    margin-right: 4px;
+    
   }
 }
 
