--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
 @import 'sass/variables';
 @import 'sass/pokemon';
+@import 'sass/inputSearch';
 
 * {
   box-sizing: border-box;
