--- a/pokedex/src/sass/_variables.scss
+++ b/pokedex/src/sass/_variables.scss
@@ -15,3 +15,13 @@ $color-body: rgb(248, 248, 248);
 // ===========================================================================================
 
 $paragraph-font-size: 50px;
+
+// ===========================================================================================
+// Media query
+// ===========================================================================================
+
+$media-query-l: 1280px;
+$media-query-m: 1024px;
+$media-query-s: 900px;
+$media-query-xs: 600px;
+ 
