--- a/pokedex/src/sass/_pokemon.scss
+++ b/pokedex/src/sass/_pokemon.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
+  max-width: 1440px;
 }
 
 .pokemon {
@@ -42,6 +43,7 @@
   &__infos {
     padding: 8px 12px 12px;
     border-radius: 0 0 16px 0;
+    width: 100%;
 
     &__plus-icon {
       position: absolute;
@@ -63,6 +65,14 @@
       bottom: 142.65px;
     }
 
+    &__id {
+      font-size: 10px;
+      width: 120px;
+      height: 12px;
+      margin: 0;
+      padding: 0%;
+    }
+    
     &__name {
       font-size: 16px;
       line-height: 24px;
@@ -73,23 +83,15 @@
       text-align: center;
     }
 
-    &__id {
-      font-size: 10px;
-      line-height: 12px;
-      position: static;
-      width: 120px;
-      height: 12px;
-      left: 0px;
-      top: 6px;
-      flex: none;
-      order: 0;
-      flex-grow: 1;
-      margin: 0;
-      padding: 0%;
-    }
-
     &__img {
       width: 100%;
+      max-width: 160px;
+      max-height: 160px;
+      text-align: center;
+      margin: 0 auto;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      display: flex;
     }
   }
 
@@ -104,9 +106,14 @@
       line-height: 12px;
       border: 1px solid black;
       border-radius: 4px;
-      padding: 0 2px;
+      padding: 0 3px;
       text-transform: capitalize;
       margin-right: 4px;
     }
+  }
+  .pokemon__infos__wrapper {
+    height: 20px;
+    display: flex;
+    align-items: center;
   }
 }
