--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -2,6 +2,10 @@
 @import 'sass/variables';
 @import 'sass/pokemon';
 @import 'sass/inputSearch';
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/mixins';
+@import '../node_modules/bootstrap/scss/grid';
 
 * {
   box-sizing: border-box;
