refactor: add grid with bootstrap

--- a/pokedex/src/sass/_pokemon.scss
+++ b/pokedex/src/sass/_pokemon.scss
@@ -24,7 +24,7 @@
   color: #2B3140;
   flex-grow: 1;
   flex-shrink: 1;
-  flex-basis: calc(16.6% - 12px);
+  // flex-basis: calc(16.6% - 12px);
   margin: 6px;
 
   &__infos {
