--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -16,7 +16,10 @@ body {
   div {
     button {
       background-color: $color-button;
-      margin-bottom: 20px;
+      margin: 20px 0;
+    }
+    input{
+      margin-bottom: 20px ;
     }
   }
 }
