--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -6,6 +6,7 @@
 @import '../node_modules/bootstrap/scss/variables';
 @import '../node_modules/bootstrap/scss/mixins';
 @import '../node_modules/bootstrap/scss/grid';
+@import 'sass/inputMoves';
 
 * {
   box-sizing: border-box;
@@ -18,8 +19,8 @@ body {
       background-color: $color-button;
       margin: 20px 0;
     }
-    input{
-      margin-bottom: 20px ;
+    input {
+      margin-bottom: 20px;
     }
   }
 }
