--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -6,8 +6,7 @@
 @import '../node_modules/bootstrap/scss/variables';
 @import '../node_modules/bootstrap/scss/mixins';
 @import '../node_modules/bootstrap/scss/grid';
-@import 'sass/inputMoves';
-@import 'sass/inputAbilitys';
+@import 'sass/inputFilters';
 
 * {
   box-sizing: border-box;
