--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -7,6 +7,7 @@
 @import '../node_modules/bootstrap/scss/mixins';
 @import '../node_modules/bootstrap/scss/grid';
 @import 'sass/inputFilters';
+@import 'sass/inputPokedexParagraph';
 
 * {
   box-sizing: border-box;
