--- a/pokedex/src/sass/_inputPokedexParagraph.scss
+++ b/pokedex/src/sass/_inputPokedexParagraph.scss
@@ -1,3 +1,6 @@
+.app {
+  background-color: #ffffff;
+}
 .div-pokedex {
   display: flex;
 }
@@ -25,13 +28,21 @@
 }
 .div-user-icon {
   display: flex;
-  margin-left: 1250px;
+  margin-left: auto;
   align-items: center;
 }
-
-.pokedex-paragraph {
+.div-filters-button-container {
+  display: flex;
+}
+.div-filters-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pokedex-union {
   color: #3156c6;
-  text-decoration: underline;
+  border-bottom: 2px solid #3156c6;
+  margin-bottom: 7px;
   justify-content: center;
 }
 
@@ -52,32 +63,34 @@
   font-family: 'Nunito';
   font-style: normal;
   font-weight: bold;
-  width: 48px;
-  height: 24px;
-  left: 32px;
-  top: 0px;
-  font-size: 20px;
-  line-height: 24px;
+  width: 98px;
+  height: 32px;
+  left: 48px;
+  top: 104px;
+  font-size: 24px;
+  line-height: 32px;
   color: #2b3140;
-  padding-top: 15px;
+  padding-top: 15px 0;
 }
 
 .filters-button {
-  display: inline-block;
+  display: flex;
   font-family: 'Nunito';
   font-style: normal;
   font-weight: bold;
-  color: #2b3140;
   border: 1px solid rgb(214, 214, 214);
+  background-color: transparent;
   border-radius: 4px;
   width: 79px;
-  height: 38px;
+  height: 32px;
   left: 32px;
   top: 8px;
   font-size: 12px;
   padding: 4px 4px;
   margin: 7px;
   padding-left: 3px;
+  align-items: center;
+  justify-content: center;
 }
 .union-img {
   margin: 14px;
@@ -90,4 +103,7 @@
 }
 .user-img {
   margin: 18px;
+}
+.filters-img {
+  margin-right: 5px;
 }
