--- a/pokedex/src/sass/_inputSearch.scss
+++ b/pokedex/src/sass/_inputSearch.scss
@@ -1,12 +1,8 @@
 .input-search {
-    background: #FFFFFF;
-    border: 1px solid #D1D7E5;
-    box-sizing: border-box;
-    border-radius: 8px;
-    position: absolute;
-    width: 432px;
-    height: 48px;
-    right: 40px;
-    top: 96px;
-  }
-  
+  background: #ffffff;
+  border: 1px solid #d1d7e5;
+  box-sizing: border-box;
+  border-radius: 8px;
+  width: 432px;
+  height: 48px;
+}
