feat: styling input search of move and abilities

--- a/pokedex/src/sass/_inputFilters.scss
+++ b/pokedex/src/sass/_inputFilters.scss
@@ -103,11 +103,11 @@
   font-size: 16px;
 }
 
-.search-moves {
+.search-filters {
   background: #ffffff;
   border: 1px solid #d1d7e5;
   box-sizing: border-box;
   border-radius: 8px;
-  width: 432px;
+  width: 600px;
   height: 48px;
 }
