--- a/pokedex/src/sass/_inputFilters.scss
+++ b/pokedex/src/sass/_inputFilters.scss
@@ -1,12 +1,37 @@
 .filter-container {
-  scroll-behavior: auto;
+  display: flex;
+  overflow: scroll;
   max-height: 100px;
   overflow-y: auto;
-  border: 1px solid black;
+  border: transparent;
+  max-width: 664px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+
+.container-types {
+  flex-wrap: wrap;
+  display: inline-block;
+}
+
+.checkbox-div {
+  display: flex;
+  justify-content: start;
+}
+
+.checkbox-container {
+  display: inline-block;
+}
+
+.checkbox-height-container {
+  margin-left: 20px;
 }
 
 .input-weight {
   visibility: hidden;
+  margin-left: auto;
+  padding-left: 0;
+  width: 0;
 }
 
 .label-weight {
@@ -15,10 +40,17 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
+  margin-bottom: 35px;
+  max-width: 100%;
+  height: 32px;
+  margin-right: 2px;
 }
 
 .input-height {
   visibility: hidden;
+  margin-left: auto;
+  padding-left: 0;
+  width: 0;
 }
 
 .label-height {
@@ -28,6 +60,8 @@
   justify-content: center;
   box-sizing: border-box;
   margin-bottom: 35px;
+  margin-right: 2px;
+  height: 32px;
 }
 
 .label-height > input + span {
@@ -60,6 +94,8 @@
 
 .input-type {
   visibility: hidden;
+  appearance: none;
+  margin-right: 2px;
 }
 
 .label-type {
@@ -68,12 +104,13 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  margin-bottom: 5px;
+  margin-bottom: 17px;
+  height: 32px;
 }
 
 .label-type > input + span {
   border-radius: 4px;
-  padding: 4px 12px;
+  padding: 8px 12px;
   border: 1px solid #99a2b8;
   cursor: pointer;
   max-width: 100%;
@@ -103,11 +140,66 @@
   font-size: 16px;
 }
 
+.search-container {
+  display: inline-block;
+  position: relative;
+  justify-content: space-around;
+}
+
 .search-filters {
+  display: flex;
   background: #ffffff;
   border: 1px solid #d1d7e5;
   box-sizing: border-box;
   border-radius: 8px;
-  width: 600px;
+  width: 450px;
   height: 48px;
+  margin-bottom: 20px;
+  background-image: url(../icons/lupa.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.input-filtered {
+  visibility: hidden;
+  display: flex;
+  margin: 7px;
+  padding-left: 0;
+  width: 0;
+}
+
+.search-img {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.label-search {
+  display: inline-block;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  margin-right: 7px;
+}
+
+.label-search > input + span {
+  border-radius: 4px;
+  padding: 8px 12px;
+  border: 1px solid #99a2b8;
+  cursor: pointer;
+  max-width: 100%;
+  height: 32px;
+  margin-bottom: 10px;
+}
+
+.label-search > input:checked + span {
+  visibility: visible;
+  background-color: rgb(240, 233, 233);
+}
+
+.filter-name {
+  margin-top: 50px;
+  font-weight: bold;
+  font-size: 16px;
 }
