--- a/pokedex/src/sass/_inputFilters.scss
+++ b/pokedex/src/sass/_inputFilters.scss
@@ -143,7 +143,7 @@
 .search-container {
   display: inline-block;
   position: relative;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .search-filters {
@@ -157,7 +157,8 @@
   margin-bottom: 20px;
   background-image: url(../icons/lupa.png);
   background-repeat: no-repeat;
-  background-position: right center;
+  background-position: 97% center;
+  padding: 0 12px;
 }
 
 .input-filtered {
