--- a/pokedex/src/sass/_inputSearch.scss
+++ b/pokedex/src/sass/_inputSearch.scss
@@ -1,9 +1,31 @@
+.pokedex-and-search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section-paragraph {
+  display: inline-block;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: bold;
+  width: 98px;
+  height: 32px;
+  font-size: 24px;
+  line-height: 32px;
+  color: #2b3140;
+  padding-top: 15px 0;
+  margin-left: 15px;
+}
+
 .input-search {
-  display: block;
+  display: inline-block;
   background: #ffffff;
   border: 1px solid #d1d7e5;
   box-sizing: border-box;
   border-radius: 8px;
-  width: 432px;
+  max-width: 432px;
+  width: 100%;
   height: 48px;
+  margin-right: 300px;
 }
