--- a/pokedex/src/sass/_inputPokedexParagraph.scss
+++ b/pokedex/src/sass/_inputPokedexParagraph.scss
@@ -60,6 +60,64 @@
   display: flex;
 }
 
+.pagination-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 145px;
+}
+
+.previous-button {
+  background-color: transparent;
+  border: none;
+  align-items: center;
+}
+
+.previous-img {
+  display: flex;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  align-items: center;
+}
+
+.next-button {
+  background-color: transparent;
+  border: none;
+  transform: rotate(180deg);
+  align-items: center;
+}
+
+.next-img {
+  display: flex;
+  background-color: transparent;
+  max-width: 30px;
+  width: 100%;
+  height: 30px;
+  align-items: center;
+}
+
+.pages-buttons-container {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.paginates-select {
+  display: flex;
+  border: 3px solid #d6d6d6;
+  max-width: 50px;
+  font-family: 'Nunito';
+  font-style: normal;
+  padding: 4px;
+  border-radius: 4px;
+  align-items: center;
+}
+
+.select-options {
+  background-color: transparent;
+}
+
 .filters-button {
   display: flex;
   font-family: 'Nunito';
