--- a/pokedex/src/sass/_inputCheckbox.scss
+++ b/pokedex/src/sass/_inputCheckbox.scss
@@ -1,45 +1,46 @@
-.weight-and-height-container {
+.weight-and-height {
   display: flex;
   justify-content: start;
-}
-.checkbox-section {
-  display: inline-block;
+
+  &__checkbox {
+    display: inline-block;
+
+    &__paragraph {
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    &__label {
+      display: inline-block;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      box-sizing: border-box;
+      margin-bottom: 35px;
+      max-width: 100%;
+      height: 32px;
+      margin-right: 2px;
+
+      &__input {
+        visibility: hidden;
+        margin-left: auto;
+        padding-left: 0;
+        width: 0;
+      }
+
+      &__value {
+        border-radius: 4px;
+        padding: 8px 12px;
+        border: 1px solid #99a2b8;
+        cursor: pointer;
+        width: 55px;
+        height: 32px;
+      }
+    }
+  }
 }
 
-.checkbox-paragraph {
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.checkbox-label {
-  display: inline-block;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  margin-bottom: 35px;
-  max-width: 100%;
-  height: 32px;
-  margin-right: 2px;
-}
-
-.filter-value {
-  border-radius: 4px;
-  padding: 8px 12px;
-  border: 1px solid #99a2b8;
-  cursor: pointer;
-  width: 55px;
-  height: 32px;
-}
-
-.checkbox-label > input:checked + span {
+.weight-and-heigh__checkbox__label > input:checked + span {
   visibility: visible;
   background-color: rgb(240, 233, 233);
-}
-
-.checkbox-input {
-  visibility: hidden;
-  margin-left: auto;
-  padding-left: 0;
-  width: 0;
 }
