--- a/pokedex/src/sass/_pagination.scss
+++ b/pokedex/src/sass/_pagination.scss
@@ -1,57 +1,55 @@
-.pagination-container {
+.pagination {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 20px 145px;
-}
 
-.pagination-select {
-  display: flex;
-  border: 3px solid #d6d6d6;
-  max-width: 50px;
-  font-family: 'Nunito';
-  font-style: normal;
-  padding: 4px;
-  border-radius: 4px;
-  align-items: center;
-}
+  &__select {
+    display: flex;
+    border: 3px solid #d6d6d6;
+    max-width: 50px;
+    font-family: 'Nunito';
+    font-style: normal;
+    padding: 4px;
+    border-radius: 4px;
+    align-items: center;
 
-.select-options {
-  background-color: transparent;
-}
+    &__options {
+      background-color: transparent;
+    }
+  }
+  &__pages {
+    display: flex;
+    align-items: center;
+    justify-content: end;
 
-.pages-buttons-container {
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
+    &__previous-button {
+      background-color: transparent;
+      border: none;
+      align-items: center;
 
-.previous-button {
-  background-color: transparent;
-  border: none;
-  align-items: center;
-}
+      &__img {
+        display: flex;
+        background-color: transparent;
+        width: 30px;
+        height: 30px;
+        align-items: center;
+      }
+    }
+    &__next-button {
+      background-color: transparent;
+      border: none;
+      transform: rotate(180deg);
+      align-items: center;
 
-.previous-img {
-  display: flex;
-  background-color: transparent;
-  width: 30px;
-  height: 30px;
-  align-items: center;
-}
-
-.next-button {
-  background-color: transparent;
-  border: none;
-  transform: rotate(180deg);
-  align-items: center;
-}
-
-.next-img {
-  display: flex;
-  background-color: transparent;
-  max-width: 30px;
-  width: 100%;
-  height: 30px;
-  align-items: center;
+      &__img {
+        display: flex;
+        background-color: transparent;
+        max-width: 30px;
+        width: 100%;
+        height: 30px;
+        align-items: center;
+      }
+    }
+  }
 }
