--- a/pokedex/src/sass/_app.scss
+++ b/pokedex/src/sass/_app.scss
@@ -1,5 +1,7 @@
 .app {
   background-color: #ffffff;
+  max-width: 1440px;
+  margin: 0 auto;
 
   &__header {
     display: flex;
@@ -7,7 +9,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: bold;
-    color: #2b3140;
+    color: var(--black-color);
     font-size: 14px;
     align-items: center;
 
@@ -20,8 +22,8 @@
       }
 
       &__paragraph {
-        color: #3156c6;
-        border-bottom: 2px solid #3156c6;
+        color: var(--blue-color);
+        border-bottom: 2px solid var(--blue-color);
         margin-bottom: 7px;
         justify-content: center;
       }
@@ -84,7 +86,6 @@
       line-height: 32px;
       color: #2b3140;
       padding-top: 15px 0;
-      margin-left: 15px;
     }
 
     &__input {
@@ -96,7 +97,7 @@
       max-width: 432px;
       width: 100%;
       height: 48px;
-      margin-right: 300px;
+      padding-left: 7px;
     }
   }
 
@@ -117,7 +118,7 @@
       top: 8px;
       font-size: 12px;
       padding: 4px 4px;
-      margin: 7px 15px;
+      margin: 7px 0;
       padding-left: 3px;
       align-items: center;
       justify-content: center;
@@ -127,4 +128,8 @@
       }
     }
   }
+}
+
+.app-container {
+  margin-bottom: 10px;
 }
