--- a/pokedex/src/sass/_searchFilters.scss
+++ b/pokedex/src/sass/_searchFilters.scss
@@ -36,27 +36,19 @@
   margin-bottom: 30px;
 
   &__label {
-    display: inline-block;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
+    @extend %checkbox-label;
+
     margin-right: 7px;
 
     &__input-filtered {
-      visibility: hidden;
+      @extend %checkbox-input;
       display: flex;
       margin: 7px;
-      padding-left: 0;
-      width: 0;
     }
+
     &__value {
-      border-radius: 4px;
-      padding: 8px 12px;
-      border: 1px solid #99a2b8;
-      cursor: pointer;
+      @extend %checkbox-value;
       max-width: 100%;
-      height: 32px;
       margin-bottom: 10px;
     }
   }
