--- a/pokedex/src/sass/_searchForTypes.scss
+++ b/pokedex/src/sass/_searchForTypes.scss
@@ -9,26 +9,21 @@
     height: 24px;
   }
   &__section {
-    display: inline-block;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
+    @extend %checkbox-label;
+
     margin-bottom: 17px;
     height: 32px;
 
     &__input {
-      visibility: hidden;
-      appearance: none;
-      margin-right: 2px;
+      // visibility: hidden;
+      // appearance: none;
+      // margin-right: 2px;
+
+      @extend %checkbox-input;
     }
     &__value {
-      border-radius: 4px;
-      padding: 8px 12px;
-      border: 1px solid #99a2b8;
-      cursor: pointer;
+      @extend %checkbox-value;
       max-width: 100%;
-      height: 32px;
       margin-top: 10px;
     }
   }
