--- a/pokedex/src/sass/_searchFilters.scss
+++ b/pokedex/src/sass/_searchFilters.scss
@@ -54,7 +54,7 @@
   }
 }
 
-.label-search > input:checked + span {
+.filter__label > input:checked + span {
   visibility: visible;
   background-color: rgb(240, 233, 233);
 }
