--- a/pokedex/src/sass/_filtersModal.scss
+++ b/pokedex/src/sass/_filtersModal.scss
@@ -31,6 +31,7 @@
       align-items: center;
       border: transparent;
       background-color: transparent;
+      cursor: pointer;
 
       &__img {
         color: #2b3140;
@@ -58,6 +59,9 @@
       justify-content: flex-end;
       align-items: center;
       padding: 12px 16px;
+      cursor: pointer;
+      opacity: 1;
+      transition: all 0.2s ease;
     }
 
     &__search-button {
@@ -73,6 +77,17 @@
       background: var(--blue-color);
       border: transparent;
       color: white;
+      cursor: pointer;
     }
   }
+}
+
+.filters__buttons-section__clear-button:hover {
+  transform: scale(1.1);
+  transition: all 0.2s;
+}
+
+.filters__buttons-section__search-button:hover {
+  transform: scale(1.1);
+  transition: all 0.2s;
 }
