--- a/pokedex/src/sass/_app.scss
+++ b/pokedex/src/sass/_app.scss
@@ -1,6 +1,6 @@
 .app {
   background-color: #ffffff;
-  max-width: 1440px;
+  // max-width: 1440px;
   margin: 0 auto;
 
   &__header {
@@ -12,6 +12,12 @@
     color: var(--black-color);
     font-size: 14px;
     align-items: center;
+    padding: 0 20px;
+
+    .container {
+      width: 100%;
+      display: flex;
+    }
 
     &__union-section {
       display: flex;
@@ -98,6 +104,17 @@
       width: 100%;
       height: 48px;
       padding-left: 7px;
+      background-image: url(../icons/lupa.png);
+      background-repeat: no-repeat;
+      background-position: 97% center;
+      padding: 0 12px;
+      @include media-breakpoint-down(sm) {
+        max-width: 232px;
+        margin-left: 50px;
+      }
+      @include media-breakpoint-down(md) {
+        max-width: 332px;
+      }
     }
   }
 
@@ -133,6 +150,7 @@
 
 .app-container {
   margin-bottom: 10px;
+  padding: 0 32px;
 }
 
 .app__filters-section__button:hover {
