--- a/pokedex/src/sass/_pokemon.scss
+++ b/pokedex/src/sass/_pokemon.scss
@@ -8,6 +8,9 @@
 
 .pokemon-list {
   flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 32px;
 }
 
 .pokemon {
@@ -25,7 +28,6 @@
   color: #2b3140;
   flex-grow: 1;
   flex-shrink: 1;
-  // flex-basis: calc(16.6% - 12px);
 
   &__infos {
     padding: 8px 12px 12px;
