--- a/pokedex/src/sass/_searchFilters.scss
+++ b/pokedex/src/sass/_searchFilters.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   position: relative;
   justify-content: space-between;
+  width: 100%;
 
   &__name {
     margin-top: 50px;
@@ -15,7 +16,8 @@
     border: 1px solid #d1d7e5;
     box-sizing: border-box;
     border-radius: 8px;
-    width: 450px;
+    width: 100%;
+    max-width: 100%;
     height: 48px;
     margin-bottom: 20px;
     background-image: url(../icons/lupa.png);
@@ -27,8 +29,7 @@
 
 .filter {
   display: flex;
-  overflow: scroll;
-  max-height: 100px;
+  max-height: 200px;
   overflow-y: auto;
   border: transparent;
   max-width: 664px;
