--- a/pokedex/src/sass/_app.scss
+++ b/pokedex/src/sass/_app.scss
@@ -1,6 +1,5 @@
 .app {
   background-color: #ffffff;
-  // max-width: 1440px;
   margin: 0 auto;
 
   &__header {
@@ -13,15 +12,32 @@
     font-size: 14px;
     align-items: center;
     padding: 0 20px;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+      background-color: #ffffff;
+      border-radius: 16px 16px 0 0;
+      z-index: 9999;
+      justify-content: space-evenly;
+      box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+    }
 
     .container {
       width: 100%;
       display: flex;
+      @include media-breakpoint-down(sm) {
+        justify-content: space-evenly;
+      }
     }
 
     &__union-section {
       display: flex;
       margin-right: 15px;
+      @include media-breakpoint-down(sm) {
+        border-bottom: 2px solid var(--blue-color);
+        margin: 0;
+      }
 
       &__img {
         margin: 14px;
@@ -32,12 +48,18 @@
         border-bottom: 2px solid var(--blue-color);
         margin-bottom: 7px;
         justify-content: center;
+        @include media-breakpoint-down(sm) {
+          display: none;
+        }
       }
     }
 
     &__teams-section {
       display: flex;
       margin-right: 15px;
+      @include media-breakpoint-down(sm) {
+        margin: 0;
+      }
 
       &__img {
         margin: 12px;
@@ -46,11 +68,17 @@
       &__paragraph {
         width: 100%;
         display: flex;
+        @include media-breakpoint-down(sm) {
+          display: none;
+        }
       }
     }
 
     &__favorite-section {
       display: flex;
+      @include media-breakpoint-down(sm) {
+        margin: 0;
+      }
 
       &__img {
         margin: 12px;
@@ -58,21 +86,30 @@
 
       &__paragraph {
         display: flex;
+        @include media-breakpoint-down(sm) {
+          display: none;
+        }
       }
     }
 
     &__user-section {
       display: flex;
       margin-left: auto;
-      align-items: center;
       padding-right: 20px;
+      align-items: center;
+      @include media-breakpoint-down(sm) {
+        margin: 0;
+      }
 
       &__img {
-        margin: 18px;
+        margin: 14px;
       }
 
       &__paragraph {
         display: flex;
+        @include media-breakpoint-down(sm) {
+          display: none;
+        }
       }
     }
   }
@@ -80,6 +117,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @include media-breakpoint-down(sm) {
+      display: block;
+      width: 100%;
+    }
 
     &__paragraph {
       display: inline-block;
@@ -109,11 +150,9 @@
       background-position: 97% center;
       padding: 0 12px;
       @include media-breakpoint-down(sm) {
-        max-width: 232px;
-        margin-left: 50px;
-      }
-      @include media-breakpoint-down(md) {
-        max-width: 332px;
+        width: 100%;
+        max-width: 432px;
+        margin-bottom: 20px;
       }
     }
   }
