feat: includes shadow on mobile menu

--- a/pokedex/src/sass/_pokemon.scss
+++ b/pokedex/src/sass/_pokemon.scss
@@ -10,7 +10,8 @@
   flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
-  padding: 0 32px;
+
+  padding: 0 32px 85px 32px;
 }
 
 .pokemon {
