--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -11,6 +11,7 @@
 @import 'sass/inputCheckbox';
 @import 'sass/filtersModal';
 @import 'sass/pagination';
+@import 'sass/loading';
 
 * {
   box-sizing: border-box;
