--- a/pokedex/src/sass/_filtersModal.scss
+++ b/pokedex/src/sass/_filtersModal.scss
@@ -45,6 +45,17 @@
   &__buttons-section {
     display: flex;
     justify-content: flex-end;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      position: fixed;
+      left: 0;
+      padding: 10px 14px;
+      background-color: #ffffff;
+      border-radius: 16px 16px 0 0;
+      z-index: 9999;
+      justify-content: space-evenly;
+      box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+    }
 
     &__clear-button {
       display: inline-block;
@@ -62,6 +73,9 @@
       cursor: pointer;
       opacity: 1;
       transition: all 0.2s ease;
+      @include media-breakpoint-down(sm) {
+        width: 50%;
+      }
     }
 
     &__search-button {
@@ -78,6 +92,9 @@
       border: transparent;
       color: white;
       cursor: pointer;
+      @include media-breakpoint-down(sm) {
+        width: 50%;
+      }
     }
   }
 }
