--- a/pokedex/src/sass/_app.scss
+++ b/pokedex/src/sass/_app.scss
@@ -190,6 +190,9 @@
 .app-container {
   margin-bottom: 10px;
   padding: 0 32px;
+  @include media-breakpoint-down(sm) {
+    padding: 0 16px 0 16px;
+  }
 }
 
 .app__filters-section__button:hover {
