feat: add detais on page with js and css

--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -12,6 +12,7 @@
 @import 'sass/filtersModal';
 @import 'sass/pagination';
 @import 'sass/loading';
+@import 'sass/pokemonDetails';
 
 * {
   box-sizing: border-box;
