--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -31,6 +31,7 @@ body {
     display: inline-block;
     width: 100%;
     padding-left: 15px;
+    padding-right: 30px;
 
     &__details {
       display: flex;
@@ -58,7 +59,7 @@ body {
 
       &__favorite-area {
         display: flex;
-        padding-right: 30px;
+
         justify-content: end;
         align-items: center;
 
@@ -78,7 +79,6 @@ body {
           text-align: center;
           font-weight: bold;
           font-size: 12px;
-          // line-height: 20px;
           align-items: center;
           margin-right: 10px;
         }
@@ -165,6 +165,8 @@ body {
       display: flex;
       align-items: center;
       padding-left: 15px;
+      border-bottom: 1px dashed #d1d7e5;
+      padding-bottom: 20px;
 
       &__paragraph {
         border-radius: 4px;
@@ -183,6 +185,8 @@ body {
       flex-wrap: wrap;
       padding-left: 15px;
       margin-top: 30px;
+      border-bottom: 1px dashed #d1d7e5;
+      padding-bottom: 30px;
 
       &__title {
         font-size: 16px;
