--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -4,8 +4,12 @@ body {
   margin: 0px;
 }
 
-.container {
-  height: 100%;
+.banana {
+  .app__header {
+    @include media-breakpoint-down(sm) {
+      visibility: hidden;
+    }
+  }
 }
 
 .details-container {
@@ -13,25 +17,94 @@ body {
   background-color: white;
   color: #2b3140;
   height: 100%;
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+    flex-direction: column;
+  }
 
   &__pokemon {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 50%;
+    min-width: 40%;
     height: 100vh;
-    max-width: 600px;
     margin: 0;
+    flex: 1 0 40%;
+    width: 50%;
+    @include media-breakpoint-down(sm) {
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+    }
 
     &__img {
       max-width: 90%;
+      max-height: 45%;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 100px;
+      @include media-breakpoint-down(sm) {
+        max-width: 45%;
+        z-index: 1;
+        max-height: 100%;
+        min-height: 70%;
+        margin-bottom: auto;
+        margin-top: 50px;
+      }
+    }
+    &__favorite-area {
+      display: none;
+      justify-content: end;
+      align-items: center;
+      visibility: hidden;
+      @include media-breakpoint-down(sm) {
+        display: flex;
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        visibility: visible;
+      }
+
+      &__add-button {
+        display: flex;
+        font-family: 'Nunito';
+        font-style: normal;
+        font-weight: bold;
+        border-radius: 4px;
+        background: var(--blue-color);
+        border: transparent;
+        color: white;
+        cursor: pointer;
+        padding: 17px 16px;
+        width: 120px;
+        height: 30px;
+        text-align: center;
+        font-size: 12px;
+        align-items: center;
+        margin-right: 10px;
+      }
+
+      &__icon {
+        display: flex;
+        align-items: center;
+      }
     }
   }
 
   &__informations {
     display: inline-block;
-    width: 100%;
+    width: 60%;
     padding-left: 15px;
     padding-right: 30px;
+    flex: 1 0 60%;
+    @include media-breakpoint-down(sm) {
+      background-color: white;
+      border-radius: 16px 16px 0px 0px;
+      transform: translateY(-33px);
+      max-width: 100%;
+      width: 100%;
+    }
 
     &__details {
       display: flex;
@@ -59,9 +132,11 @@ body {
 
       &__favorite-area {
         display: flex;
-
         justify-content: end;
         align-items: center;
+        @include media-breakpoint-down(sm) {
+          visibility: hidden;
+        }
 
         &__add-button {
           display: flex;
@@ -77,7 +152,6 @@ body {
           width: 120px;
           height: 30px;
           text-align: center;
-          font-weight: bold;
           font-size: 12px;
           align-items: center;
           margin-right: 10px;
@@ -204,6 +278,10 @@ body {
         border-radius: 4px;
         width: 316px;
         height: 8px;
+        @include media-breakpoint-down(sm) {
+          width: 100%;
+          margin-right: auto;
+        }
       }
 
       &__progressbar {
@@ -216,6 +294,9 @@ body {
     &__teams {
       padding-left: 15px;
       margin-top: 50px;
+      @include media-breakpoint-down(sm) {
+        margin-bottom: 100px;
+      }
 
       &__title {
         font-size: 16px;
@@ -234,6 +315,108 @@ body {
           line-height: 20px;
           text-decoration: none;
         }
+      }
+    }
+  }
+}
+
+.footer-container {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  max-width: 100%;
+  width: 100%;
+  height: 64px;
+  background: #ffffff;
+  border: 1px solid #edeef8;
+  border-radius: 16px 16px 0px 0px;
+  padding-right: auto;
+
+  &__footer-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    &__button {
+      background-color: transparent;
+      border: none;
+      justify-content: center;
+
+      &__img {
+        width: 35px;
+        height: 30px;
+        color: #6e7a96;
+      }
+    }
+    &__previous {
+      &__id {
+        font-size: 12px;
+        line-height: 12px;
+        color: #6e7a96;
+        margin-bottom: auto;
+      }
+      &__name {
+        font-size: 14px;
+        line-height: 20px;
+        color: #2b3140;
+        font-weight: bold;
+        margin-top: auto;
+      }
+    }
+  }
+
+  &__bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__img {
+      width: 0px;
+      height: 24px;
+      border: 1px solid #d1d7e5;
+    }
+  }
+
+  &__footer-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+
+    &__next {
+      &__id {
+        font-size: 12px;
+        line-height: 12px;
+        right: auto;
+        width: 40px;
+        margin-left: auto;
+        color: #6e7a96;
+        margin-bottom: auto;
+      }
+      &__name {
+        font-size: 14px;
+        line-height: 20px;
+        color: #2b3140;
+        font-weight: bold;
+        margin-top: auto;
+      }
+    }
+
+    &__button {
+      background-color: transparent;
+      border: none;
+      justify-content: center;
+      transform: rotate(180deg);
+
+      &__img {
+        width: 35px;
+        height: 30px;
+        color: #6e7a96;
       }
     }
   }
