feat: add loading and ApiError components

--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -4,7 +4,7 @@ body {
   margin: 0px;
 }
 
-.banana {
+.details-page {
   .app__header {
     @include media-breakpoint-down(sm) {
       visibility: hidden;
