--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -221,6 +221,10 @@ body {
           font-weight: 900;
           font-size: 14px;
           line-height: 20px;
+
+          &__click-modal {
+            cursor: pointer;
+          }
         }
       }
     }
