feat: add modal details

--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -13,6 +13,7 @@
 @import 'sass/pagination';
 @import 'sass/loading';
 @import 'sass/pokemonDetails';
+@import 'sass/modalDetails';
 
 * {
   box-sizing: border-box;
