--- a/pokedex/src/sass/_modalDetails.scss
+++ b/pokedex/src/sass/_modalDetails.scss
@@ -34,9 +34,7 @@
     padding-left: 30px;
     &__details {
       text-transform: capitalize;
-      font-family: Nunito;
-      font-style: normal;
-      font-weight: bold;
+      @extend %font-value;
       font-size: 24px;
       line-height: 32px;
       margin: 0;
@@ -65,9 +63,7 @@
       border-radius: 4px;
       border: none;
       color: #ffffff;
-      font-family: Nunito;
-      font-style: normal;
-      font-weight: bold;
+      @extend %font-value;
       font-size: 14px;
       line-height: 20px;
     }
