--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -1,9 +1,3 @@
-.html,
-body {
-  height: 100%;
-  margin: 0px;
-}
-
 .details-page {
   .app__header {
     @include media-breakpoint-down(sm) {
@@ -67,10 +61,11 @@ body {
       }
 
       &__add-button {
+        @extend %font-value;
         display: flex;
-        font-family: 'Nunito';
-        font-style: normal;
-        font-weight: bold;
+        // font-family: 'Nunito';
+        // font-style: normal;
+        // font-weight: bold;
         border-radius: 4px;
         background: var(--blue-color);
         border: transparent;
@@ -139,10 +134,11 @@ body {
         }
 
         &__add-button {
+          @extend %font-value;
           display: flex;
-          font-family: 'Nunito';
-          font-style: normal;
-          font-weight: bold;
+          // font-family: 'Nunito';
+          // font-style: normal;
+          // font-weight: bold;
           border-radius: 4px;
           background: var(--blue-color);
           border: transparent;
@@ -250,6 +246,7 @@ body {
       padding-bottom: 20px;
 
       &__paragraph {
+        @extend %font-value;
         border-radius: 4px;
         padding: 5px 5px;
         text-transform: capitalize;
@@ -257,9 +254,9 @@ body {
         display: inline-block;
         font-size: 10px;
         line-height: 12px;
-        font-family: 'Nunito';
-        font-style: normal;
-        font-weight: bold;
+        // font-family: 'Nunito';
+        // font-style: normal;
+        // font-weight: bold;
       }
     }
     &__stats {
