--- a/pokedex/src/sass/_modalDetails.scss
+++ b/pokedex/src/sass/_modalDetails.scss
@@ -1,11 +1,22 @@
+.ReactModal__Overlay {
+  z-index: 10;
+  padding-bottom: 0;
+}
+
 .modal-container {
   padding: auto;
+  @include media-breakpoint-down(sm) {
+    z-index: 10;
+    height: 100%;
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 19px;
     padding: 0 29px 0 30px;
+    z-index: 4;
     &__title {
       margin: 0;
       color: #2b3140;
@@ -23,8 +34,6 @@
       background-color: transparent;
       border: none;
       padding: 0;
-    }
-    &__img {
     }
   }
 
@@ -52,7 +61,7 @@
   }
   &__footer {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     border-top: 1px solid #edeef8;
     &__button {
       margin: 12px 16px 10px 0;
