--- a/pokedex/src/sass/_modalDetails.scss
+++ b/pokedex/src/sass/_modalDetails.scss
@@ -1,6 +1,9 @@
 .ReactModal__Overlay {
   z-index: 10;
   padding-bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-container {
