--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -102,9 +102,8 @@
         }
 
         &__icon {
-          display: flex;
-          align-items: center;
           padding: 3px;
+          width: 34px;
         }
       }
     }
