feat: add SignIn css

--- a/pokedex/src/index.scss
+++ b/pokedex/src/index.scss
@@ -14,6 +14,7 @@
 @import 'sass/loading';
 @import 'sass/pokemonDetails';
 @import 'sass/modalDetails';
+@import 'sass/signIn';
 
 * {
   box-sizing: border-box;
